<resources>
    <string name="app_name">Paiyz</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="vAmount_str">Amount</string>
    <string name="vPercent_str" translatable="false">Percent</string>
    <string name="vYears_str" translatable="false">Years</string>
    <string name="vMonths_str" translatable="false">Months</string>
    <string name="vCalcMethod_str" translatable="false">Calc Method</string>
    <string name="err_no_all_fialds" translatable="false">Please fill in all fields</string>

    <string-array name="vCalcKind_strarr">
        <item>Annuity</item>
        <item>Differentiated</item>
    </string-array>
    <string name="title_activity_ntj">NtjActivity</string>
</resources>
